--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "npm": "^10.4.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
