--- a/.github/workflows/production_dsmcsurvey.yml
+++ b/.github/workflows/production_dsmcsurvey.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -26,12 +26,15 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,17 +50,20 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_8D2035A2FB5B4B1C9FD5006F879FF3F7 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7DCEE992FCFB434FAB124A5D71F87251 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_475F60CD45724A77825ABF8F1712F4F5 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2133CF700F2F4866AF5C20A3A0263CEF }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4110D380DC3741FCB555C75ACFA5E585 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_492529AC70DA437089065F0D66CB87B0 }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
         with:
           app-name: 'DSMCSurvey'
           slot-name: 'Production'
