--- a/.github/workflows/production_dsmcsurvey.yml
+++ b/.github/workflows/production_dsmcsurvey.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - DSMCSurvey
 on:
   push:
     branches:
-      - Production
+      - Master
   workflow_dispatch:
 
 jobs:
