--- a/.github/workflows/production_dsmcsurvey.yml
+++ b/.github/workflows/production_dsmcsurvey.yml
@@ -6,11 +6,11 @@ name: Build and deploy Node.js app to Azure Web App - DSMCSurvey
 on:
   push:
     branches:
-      - Master
+      - Production
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,20 +21,45 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      # Install and build the client
+      - name: Install and build client
         run: |
+          cd client
           npm install
           npm run build --if-present
-          npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      # Archive the built client for deployment
+      - name: Archive client for deployment
+        run: |
+          cd client
+          zip -r client.zip build
 
-      - name: Upload artifact for deployment job
+      # Upload the client artifact
+      - name: Upload client artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: node-app
-          path: release.zip
+          name: client-app
+          path: client/client.zip
+
+      # Install and build the server
+      - name: Install and test server
+        run: |
+          cd server
+          npm install
+          npm run test --if-present
+
+      # Archive the server for deployment
+      - name: Archive server for deployment
+        run: |
+          cd server
+          zip -r server.zip .
+
+      # Upload the server artifact
+      - name: Upload server artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: server-app
+          path: server/server.zip
 
   deploy:
     runs-on: ubuntu-latest
