--- a/.github/workflows/production_dsmcsurvey.yml
+++ b/.github/workflows/production_dsmcsurvey.yml
@@ -1,3 +1,4 @@
+
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
@@ -10,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,45 +22,20 @@ jobs:
         with:
           node-version: '20.x'
 
-      # Install and build the client
-      - name: Install and build client
+      - name: npm install, build, and test
         run: |
-          cd client
           npm install
           npm run build --if-present
-
-      # Archive the built client for deployment
-      - name: Archive client for deployment
-        run: |
-          cd client
-          zip -r client.zip build
-
-      # Upload the client artifact
-      - name: Upload client artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: client-app
-          path: client/client.zip
-
-      # Install and build the server
-      - name: Install and test server
-        run: |
-          cd server
-          npm install
           npm run test --if-present
 
-      # Archive the server for deployment
-      - name: Archive server for deployment
-        run: |
-          cd server
-          zip -r server.zip .
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
-      # Upload the server artifact
-      - name: Upload server artifact for deployment job
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: server-app
-          path: server/server.zip
+          name: node-app
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -93,4 +69,3 @@ jobs:
           app-name: 'DSMCSurvey'
           slot-name: 'Production'
           package: .
-          
