--- a/.github/workflows/production_dsmcsurvey.yml
+++ b/.github/workflows/production_dsmcsurvey.yml
@@ -22,11 +22,19 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: npm install, build, and test for client
+          run: |
+            cd client
+            npm install
+            npm run build --if-present
+            npm run test --if-present
+        
+        - name: npm install, build, and test for server
+          run: |
+            cd server
+            npm install
+            npm run build --if-present
+            npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
