--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=template1
-DB_PASSWORD=redsfan1
+DB_NAME=postgres
+DB_PASSWORD=DBcd6379!vH
 DB_PORT=5432
 SECRET_KEY=SECRET
