--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axiom": "^0.1.6",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
